--- a/css/styles.css
+++ b/css/styles.css
@@ -10,19 +10,16 @@
    --main-header-color: #0761e8;
  }
 
-*{
+* {
   box-sizing: border-box;
 }
 
-
 body {
-  background-color: #ffffff /* var(--main-bg-color); */
+  background-color: #ffffff; /* var(--main-bg-color); */
   font-family: 'Montserrat', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 16px;
-  /* Sets the font size to 16px */
   line-height: 1.6;
-  /* Sets the line-height to 1.6 */
   padding: 10px;
 }
 
@@ -50,35 +47,29 @@ a:visited {
   /* visited link */
   color: #CC2EFA;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
-  /* Italic style when hovering over a link */
   font-style: italic;
-  /* reduces the opacity when hovering over a link to 70% */
   opacity: 0.7;
 }
+
 a:active {
   color: #48799C;
-  /* selected link */
-    /* color: #489c79; */
 }
 
-
-.button, button {
-  /* overwrites browser defaults */
-  /* resets the border */
+.button,
+ button {
   border: none;
   display: inline-block;
-  /* takes the font from the outer container */
   font-family: inherit;
-  /* style button */
   background-color: #B5CE6F;
   color: white;
   text-decoration: none;
   padding: 10px;
   border-radius: 100px;
-  /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
 }
@@ -88,10 +79,10 @@ a:active {
   color: var(--dark-grey);
 }
 
-button:hover, button:focus {
+button:hover,
+button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
-  /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
 
@@ -116,9 +107,8 @@ header {
 .page-header__item:last-child {
   flex-grow: 1;
   text-align: right;
-
 }
- /* Navigation section */
+
 .navigation-list {
   list-style-type: none;
 }
@@ -131,9 +121,6 @@ header {
 .navigation-list__item--active {
   text-decoration: none;
 }
-
-
-/* Profile Section */
 
 .profile {
   max-width: 700px;
@@ -161,45 +148,35 @@ header {
 
 .experience-table {
   margin: 0 auto;
-  martin-bottom: 5%
+  margin-bottom: 5%;
 }
 
  /* Contact Page */
-.contact  {
+.contact {
   display: block;
   justify-content: center;
   text-align: center;
 }
 
-.contact-form  {
-    display:flex;
+.contact-form {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    width:33%;
+    width: 33%;
     margin: 0 auto;
-
   }
-
-.contact-form__label {
-
-
-}
-
- /* Work Section */
 
  .work {
    display: block;
    text-align: center;
  }
 
-/* Grid fallback*/
 .grid__item {
   display: inline-block;
   width: 33%;
 }
 
-/* Styling CSS grid*/
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -209,7 +186,6 @@ header {
 .grid__item {
   background: #808080;
   padding: 10px;
-    /* Set width to auto*/
   width: auto;
 }
 
@@ -222,14 +198,15 @@ header {
   grid-column: 3 / 3;
   grid-row: 1 / 3;
 }
-/* styles for hometown animation */
 
 .cloud-front {
 animation: 30s cloud-move infinite alternate linear;
 }
+
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
+
 .cloud-back {
 animation: 34s cloud-move-reverse infinite alternate linear;
 }
@@ -238,9 +215,11 @@ animation: 34s cloud-move-reverse infinite alternate linear;
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -250,36 +229,43 @@ animation: 34s cloud-move-reverse infinite alternate linear;
     from {
       transform: translate(0, 50px);
     }
+
     to {
       transform: translate(200px, 50px);
     }
   }
+
   @keyframes cloud-move-reverse {
     from {
       transform: translate(446px, 48px);
     }
+
     to {
       transform: translate(100px, 48px);
     }
   }
+
 @media all and (max-width: 500px) {
   .grid {
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+
+@media all and (min-width: 500px) and (max-width: 750px)
   .grid {
     grid-template-columns: 1fr 1fr;
   }
-}
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
