--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,19 +1,14 @@
-/* Portfolio Site Style Production Sheet */
-
-*{
+{
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-
 
 body {
   background-color: #ffffff;
   font-family: 'Montserrat', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 16px;
-  /* Sets the font size to 16px */
   line-height: 1.6;
-  /* Sets the line-height to 1.6 */
   padding: 10px;
 }
 
@@ -41,35 +36,28 @@ a:visited {
   /* visited link */
   color: #CC2EFA;
 }
-a:hover, a:focus {
-  /* No underlining when hovering over a link */
-  text-decoration: none;
-  /* Italic style when hovering over a link */
-  font-style: italic;
-  /* reduces the opacity when hovering over a link to 70% */
-  opacity: 0.7;
+
+a:hover,
+a:focus {
+    text-decoration: none;
+    font-style: italic;
+    opacity: 0.7;
 }
-a:active {
+
+a: active {
   color: #48799C;
-  /* selected link */
-    /* color: #489c79; */
 }
 
-
-.button, button {
-  /* overwrites browser defaults */
-  /* resets the border */
+.button,
+ button {
   border: none;
   display: inline-block;
-  /* takes the font from the outer container */
   font-family: inherit;
-  /* style button */
   background-color: #B5CE6F;
   color: white;
   text-decoration: none;
   padding: 10px;
   border-radius: 100px;
-  /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.2s opacity;
   -o-transition: 0.2s opacity;
@@ -81,14 +69,11 @@ a:active {
   color: #2b2b2b;
 }
 
-button:hover, button:focus {
-  /* lets the mouse appear as a hand when hovering over the button */
+button:hover,
+ button:focus {
   cursor: pointer;
-  /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
-
-/* Header */
 
 header {
   font-family: 'Montserrat', Helvetica, sans-serif;
@@ -115,9 +100,8 @@ header {
       -ms-flex-positive: 1;
           flex-grow: 1;
   text-align: right;
-
 }
- /* Navigation section */
+
 .navigation-list {
   list-style-type: none;
 }
@@ -130,9 +114,6 @@ header {
 .navigation-list__item--active {
   text-decoration: none;
 }
-
-
-/* Profile Section */
 
 .profile {
   max-width: 700px;
@@ -160,11 +141,11 @@ header {
 
 .experience-table {
   margin: 0 auto;
-  martin-bottom: 5%
+  margin-bottom: 5%;
 }
 
  /* Contact Page */
-.contact  {
+.contact {
   display: block;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -172,10 +153,10 @@ header {
   text-align: center;
 }
 
-.contact-form  {
-    display:-webkit-box;
-    display:-ms-flexbox;
-    display:flex;
+.contact-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -184,30 +165,20 @@ header {
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
-    width:33%;
+    width: 33%;
     margin: 0 auto;
-
   }
-
-.contact-form__label {
-
-
-}
-
- /* Work Section */
 
  .work {
    display: block;
    text-align: center;
  }
 
-/* Grid fallback*/
 .grid__item {
   display: inline-block;
   width: 33%;
 }
 
-/* Styling CSS grid*/
 .grid {
   display: -ms-grid;
   display: grid;
@@ -219,7 +190,6 @@ header {
 .grid__item {
   background: #D8D8D8;
   padding: 10px;
-    /* Set width to auto*/
   width: auto;
 }
 
@@ -235,7 +205,6 @@ header {
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
 }
-/* styles for hometown animation */
 
 .sun {
   -webkit-animation-duration: 4s;
@@ -273,14 +242,17 @@ header {
   from {
     fill: #edc655;
   }
+
   to {
     fill: #f76414;
   }
 }
+
 @keyframes color-change {
   from {
     fill: #edc655;
   }
+
   to {
     fill: #f76414;
   }
@@ -291,6 +263,7 @@ header {
     -webkit-transform: translate(0, 50px);
             transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
             transform: translate(200px, 50px);
@@ -302,6 +275,7 @@ header {
     -webkit-transform: translate(0, 50px);
             transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
             transform: translate(200px, 50px);
@@ -313,6 +287,7 @@ header {
     -webkit-transform: translate(446px, 48px);
             transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
             transform: translate(100px, 48px);
@@ -324,31 +299,37 @@ header {
     -webkit-transform: translate(446px, 48px);
             transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
             transform: translate(100px, 48px);
   }
 }
+
 @media all and (max-width: 500px) {
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
